# auth0-api-python

./: .gitignore  .shiprc  AGENTS.md  CHANGELOG.md  EXAMPLES.md  PROMPT_FOR_AGENTS_MD_GENERATION.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: Bug Report.yml  Feature Request.yml
.github/workflows/: codeql.yml  publish.yml  sca_scan.yml  test.yml
docs/: Caching.md  MultipleCustomDomain.md
examples/example-fastmcp-mcp/: .env.example  README.md  pyproject.toml
examples/example-fastmcp-mcp/src/: config.py  mcp.py  server.py  tools.py
examples/example-fastmcp-mcp/src/auth0/: __init__.py  authz.py  errors.py  middeware.py  middleware.py  tools.py
src/auth0_api_python/: __init__.py  act.py  api_client.py  cache.py  config.py  errors.py  issuer_validator.py  types.py  utils.py
tests/: conftest.py  test_act.py  test_api_client.py  test_cache.py  test_concurrent_fetch.py  test_mcd_integration.py  test_utils.py
